src/objects/WorkRequestForm__c.object
<CustomObject>
    <fields>
        <fullName>ContinentalTire__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Continental Tire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractDates__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Contract Dates</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractedVINAmount__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Number or VIN&apos;s</inlineHelpText>
        <label>Contracted VIN Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cost Center</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountDeliveryTo__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Count Delivery to</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentRegistrations__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Market Research only. Indicate Attachments Yes/No</inlineHelpText>
        <label>Current Registrations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomAgeClasses__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Custom Age Classes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomForecastYears__c</fullName>
        <description>This field is used for WRF-POLK. Displayed when &quot;Other&quot; is selected from Forecast Years picklist.</description>
        <label>Custom Forecast Years</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomGeoTemplate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Custom Geo Template</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomGeography__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Custom Geography</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomPeriodicity__c</fullName>
        <description>This field is used for WRF-POLK. ESSEN OSF &quot;Custom periodicity &quot; (different from delivery cycle)</description>
        <label>Custom Periodicity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomProductInfo__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Provide details below</inlineHelpText>
        <label>Custom_Product_Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomYearCoverage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Custom Year Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomYearFrom__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Custom Year From</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomYearTo__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Custom Year To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Request Forms (Customer Contact)</relationshipLabel>
        <relationshipName>Work_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerDataset__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Customer Dataset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CutbackCountsRequested__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cutback Counts Requested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Cutbacks (how?)</fullName>
                </value>
                <value>
                    <fullName>Post-Cutbacks (how?)</fullName>
                </value>
                <value>
                    <fullName>Count Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CutbackInstructions__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cutback Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CutbackRequired__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cutback Required</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To be determined</fullName>
                </value>
                <value>
                    <fullName>Type of cutback in order</fullName>
                </value>
                <value>
                    <fullName>Sort to sequence before cutback</fullName>
                </value>
                <value>
                    <fullName>Cutback counts requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CutbacksOnComparisonGroups__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Any cutbacks to be performed on comparison groups?</inlineHelpText>
        <label>Cutbacks on comparison groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CycleStart__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cycle Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week Days</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Semi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Six Week Cycle</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DLEx__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>DLEx</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional Methodology-Single Acq.</fullName>
                </value>
                <value>
                    <fullName>Traditional Methodology-Multiple Acq.</fullName>
                </value>
                <value>
                    <fullName>Household Loyalty Methodology</fullName>
                </value>
                <value>
                    <fullName>Disposal Methodology</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMSCodesProvided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>DMS Codes Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMSCodes__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>DMS Codes</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK. request type for Australia form</description>
        <label>DMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRDTTYPE__c</fullName>
        <description>This field is used for WRF-POLK. for selecting Vindicator request type data for the Australia form type</description>
        <label>DRDTTYPE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DRDTTYPE_01</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_02</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_03</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_04</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_05</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_06</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_07</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_08</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_09</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_10</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_11</fullName>
                </value>
                <value>
                    <fullName>DRDTTYPE_12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DUCApprovalDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>DUC Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DUCApprovalRequired__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>If DUC approval is required, an email will automatically be generated and sent to the DUC approval committee</inlineHelpText>
        <label>DUC Approval Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DUC Not Required</fullName>
                </value>
                <value>
                    <fullName>GEO to Block Group/Z4 granularity</fullName>
                </value>
                <value>
                    <fullName>Handling client SSN or Bankcard data</fullName>
                </value>
                <value>
                    <fullName>Non State Sourced Lease/Lien names</fullName>
                </value>
                <value>
                    <fullName>Registration Date down to DAY</fullName>
                </value>
                <value>
                    <fullName>Returning  Client Information – PII</fullName>
                </value>
                <value>
                    <fullName>Sales DB for any non-par  OEM</fullName>
                </value>
                <value>
                    <fullName>Stat request providing PII (Name/Addr)</fullName>
                </value>
                <value>
                    <fullName>State Source data in a restricted State</fullName>
                </value>
                <value>
                    <fullName>VIN/model &amp; ser unique veh data provided</fullName>
                </value>
                <value>
                    <fullName>Violating “rule of 3”</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DUCApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>DUC Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUCOther__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>DUC Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DataEnhancementNCOA__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Data Enhancement/NCOA</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Z4 Address Standardization</fullName>
                </value>
                <value>
                    <fullName>NCOA</fullName>
                </value>
                <value>
                    <fullName>Data Enhancement (attach form)</fullName>
                </value>
                <value>
                    <fullName>Phone Append</fullName>
                </value>
                <value>
                    <fullName>Reverse Phone Append</fullName>
                </value>
                <value>
                    <fullName>Email Append</fullName>
                </value>
                <value>
                    <fullName>Reverse Email Append</fullName>
                </value>
                <value>
                    <fullName>PAF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataExtractGlobalVIOPARC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Data Extract Global VIO (PARC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataExtractNewReg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK. Used on New Reg Form.</description>
        <label>Data Extract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataLinks__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Data Links</inlineHelpText>
        <label>Data Links</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard (Applies to All Customers)</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataNeededDescription__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Describe if data is needed from another internal team for analysis.</inlineHelpText>
        <label>Data Needed Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DataNeededFromInternalTeam__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Data needed from another internal team for analysis?</inlineHelpText>
        <label>Data Needed from Internal Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataPackage__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Data Package</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base VIN Data</fullName>
                </value>
                <value>
                    <fullName>Standard VIN Data</fullName>
                </value>
                <value>
                    <fullName>Standard Plus VIN Data</fullName>
                </value>
                <value>
                    <fullName>Deluxe VIN Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataToBeDisplayedCanada__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Data To Be Displayed Canada</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Body Description</fullName>
                </value>
                <value>
                    <fullName>Chassis Type</fullName>
                </value>
                <value>
                    <fullName>Cylinder</fullName>
                </value>
                <value>
                    <fullName>Displacement Type</fullName>
                </value>
                <value>
                    <fullName>Door Details</fullName>
                </value>
                <value>
                    <fullName>Drive Types</fullName>
                </value>
                <value>
                    <fullName>Fuel Type</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>GVW</fullName>
                </value>
                <value>
                    <fullName>Make Description</fullName>
                </value>
                <value>
                    <fullName>Manufacturer Data</fullName>
                </value>
                <value>
                    <fullName>Model Description</fullName>
                </value>
                <value>
                    <fullName>Model Series</fullName>
                </value>
                <value>
                    <fullName>Model Year</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Number of Vehicle Counts</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Registration Type</fullName>
                </value>
                <value>
                    <fullName>Segment</fullName>
                </value>
                <value>
                    <fullName>Time Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataToBeDisplayedInstructions__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Data To Be Displayed Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DataToBeDisplayed__c</fullName>
        <description>This field is used for WRF-POLK. Ad Hoc Report</description>
        <label>Data to be Displayed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Vehicle Type</fullName>
                </value>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Battery Capacity (kWH)</fullName>
                </value>
                <value>
                    <fullName>Battery Charge Time</fullName>
                </value>
                <value>
                    <fullName>Battery Output (kW)</fullName>
                </value>
                <value>
                    <fullName>Battery Type</fullName>
                </value>
                <value>
                    <fullName>Battery Voltage</fullName>
                </value>
                <value>
                    <fullName>Body Style</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Count Only</fullName>
                </value>
                <value>
                    <fullName>Cylinder Deactivation</fullName>
                </value>
                <value>
                    <fullName>Cylinders</fullName>
                </value>
                <value>
                    <fullName>Doors</fullName>
                </value>
                <value>
                    <fullName>Drive Type</fullName>
                </value>
                <value>
                    <fullName>Enhanced Finance Name</fullName>
                </value>
                <value>
                    <fullName>EPA Air Pollution &amp; Gas Scores</fullName>
                </value>
                <value>
                    <fullName>EPA Certification Sales Region</fullName>
                </value>
                <value>
                    <fullName>EPA Smart Way/ Smart Way Elite</fullName>
                </value>
                <value>
                    <fullName>Ethnic</fullName>
                </value>
                <value>
                    <fullName>Exact Age (head of household)</fullName>
                </value>
                <value>
                    <fullName>Financial Institution (New Data Only)</fullName>
                </value>
                <value>
                    <fullName>Fuel Type</fullName>
                </value>
                <value>
                    <fullName>Gender</fullName>
                </value>
                <value>
                    <fullName>GVW-Trk (Class 1-8)</fullName>
                </value>
                <value>
                    <fullName>GVW-Trk (Lbs 1-31,000)</fullName>
                </value>
                <value>
                    <fullName>Home Assessor Tax Value</fullName>
                </value>
                <value>
                    <fullName>Household Education</fullName>
                </value>
                <value>
                    <fullName>Household Size</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Integrated Starter Generator System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataTypeCanada__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Data Type  Canada</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Branded</fullName>
                </value>
                <value>
                    <fullName>Longevity</fullName>
                </value>
                <value>
                    <fullName>Motorcycle New</fullName>
                </value>
                <value>
                    <fullName>New Vehicle</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>VIO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <description>This field is used for WRF-POLK. Ad Hoc Report</description>
        <label>Data Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFS</fullName>
                </value>
                <value>
                    <fullName>China PolkInsight</fullName>
                </value>
                <value>
                    <fullName>Motorcycle - New</fullName>
                </value>
                <value>
                    <fullName>Motorcycle - Used</fullName>
                </value>
                <value>
                    <fullName>New Vehicle</fullName>
                </value>
                <value>
                    <fullName>New Vehicle Dealer Pump_In</fullName>
                </value>
                <value>
                    <fullName>New Vehicle Dealer Pump_Out</fullName>
                </value>
                <value>
                    <fullName>NVPP</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Used Vehicle</fullName>
                </value>
                <value>
                    <fullName>Used Vehicle Dealer Pump_In</fullName>
                </value>
                <value>
                    <fullName>Used Vehicle Dealer Pump_Out</fullName>
                </value>
                <value>
                    <fullName>VIO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DatabaseAccess__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Database Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Truck Registrations</fullName>
                </value>
                <value>
                    <fullName>Vehicles in Operation</fullName>
                </value>
                <value>
                    <fullName>New Trailer</fullName>
                </value>
                <value>
                    <fullName>Aftermarket Parts Demand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateAssignedWithoutApproval__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Date Assigned without Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DealerizationRecall__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Recall Dealerization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Dealerize</fullName>
                </value>
                <value>
                    <fullName>Dealerize base on VIN Make</fullName>
                </value>
                <value>
                    <fullName>Dealerize to OEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealerization__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Dealerization</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturer/Division</fullName>
                </value>
                <value>
                    <fullName>What if zip is shared by 2 Dealers</fullName>
                </value>
                <value>
                    <fullName>Dealerize to 100%</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DedupingInstructions__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Deduping instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deduping__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>what do you want to dedupe on?</inlineHelpText>
        <label>Deduping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Household</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DelimitedBy__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Delimited By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliverablesDescription__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Deliverables Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deliverables__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Deliverables</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Model Summary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Scoring</fullName>
                </value>
                <value>
                    <fullName>Tables</fullName>
                </value>
                <value>
                    <fullName>Written Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DemographicInformation__c</fullName>
        <description>This field is used for WRF-POLK. Ad Hoc Report</description>
        <label>Demographic Information</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Enhanced Ethnic (royalty)</fullName>
                </value>
                <value>
                    <fullName>Exact Age (head of household)</fullName>
                </value>
                <value>
                    <fullName>Gender</fullName>
                </value>
                <value>
                    <fullName>Hispanic</fullName>
                </value>
                <value>
                    <fullName>Home Assessor Tax Value</fullName>
                </value>
                <value>
                    <fullName>Household Education</fullName>
                </value>
                <value>
                    <fullName>Household Size</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Language Code (royalty)</fullName>
                </value>
                <value>
                    <fullName>Marital Status</fullName>
                </value>
                <value>
                    <fullName>Net Worth</fullName>
                </value>
                <value>
                    <fullName>Number of Children</fullName>
                </value>
                <value>
                    <fullName>Occupation</fullName>
                </value>
                <value>
                    <fullName>Registered Number of Vehicles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demographics__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Demographics</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DepartmentType__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Department Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Body Shop</fullName>
                </value>
                <value>
                    <fullName>Fast Fit</fullName>
                </value>
                <value>
                    <fullName>New Car Sales</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Used Car Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeprecatedParcSystem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Check this box if this WRF is for the deprecated Parc system contract entry</inlineHelpText>
        <label>Deprecated Parc System</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>